Fix spacing for applet-box
Fix/define spacing for applet-box.

--- a/Carta/files/Carta/cinnamon/cinnamon.css
+++ b/Carta/files/Carta/cinnamon/cinnamon.css
@@ -1860,10 +1860,6 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
     color: rgb(207, 216, 220);
     text-shadow: none;
     transition-duration: 100ms;
-}
-
-.panel-top .applet-box,
-.panel-bottom .applet-box {
     spacing: 3px;
 }
 
